<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
    </group>
    <group>
        <item android:id="@+id/nav_downloads"
            android:icon="@drawable/ic_file_download"
            android:title="@string/downloads" />
        <item android:id="@+id/nav_q"
            android:icon="@drawable/ic_question_answer"
            android:title="@string/questions" />
        <item android:id="@+id/nav_test"
            android:icon="@drawable/ic_test"
            android:title="@string/tests" />
        <item android:id="@+id/nav_todo"
            android:icon="@drawable/ic_todo"
            android:title="@string/to_do_list"/>
        <item android:id="@+id/nav_notice"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications"/>
    </group>
    <group>
        <item android:title="@string/others">
            <menu>
                <item android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout"/>
                <item android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/about_us"/>
            </menu>
        </item>
    </group>
</menu>